syntax = "proto3";

package pb;

option go_package = "github.com/machearn/galaxy_service/pb";

message DeleteItemRequest {
    int32 id = 1;
}

message DeleteItemResponse {
    bool success = 1;
}